# stego

./: .gitignore  CMakeLists.txt  README.md  main.c  stego.c
bitmap/src/: bitmap.c
lib/: CMakeLists.txt
lib/bitmap/: CMakeLists.txt
lib/bitmap/src/: bitmap.c
lib/stego/: CMakeLists.txt
lib/stego/include/: stego.h
lib/stego/src/: stego.c
lib/util/: CMakeLists.txt
lib/util/src/: util.c
src/: CMakeLists.txt  bitmap.c  main.c
stego/src/: stego.c
util/src/: util.c
